removes the discussion section, as requested by youngbrioche.

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 </p>
 <p class="text-centered">
 	You have comments, questions?<br/>
-	Checkout the <a href="faq.html">FAQ</a> or join the <a href="discussion.html">discussions</a>.
+	Checkout the <a href="faq.html">FAQ</a> or create a <a href="https://github.com/innoq/SCS/issues">GitHub issue</a>.
 </p>
 <p class="text-centered">
 	You would like to contribute?<br/>
