adapts the SCS definition as suggested by stefan t.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 		<div class="hero-container">
 			<div class="hero-main-content">
 				<h1 class="hero-heading">Self-contained System (SCS)</h1>
-				<h2 class="hero-subheading">An architectural approach to create a set of autonomous, smaller subsystems that collaborate to cover the functionality of the overall system.</h2>
+				<h2 class="hero-subheading">An architectural approach that separates a larger system's functionality into many independent, collaborating systems.</h2>s
 			</div>
 			<img class="hero-image" src="img/KP_Visual.svg" alt="monolith cut into multiple scs">
 		</div>
