makes the second grow box on slides in index.html larger again

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
-				<img src="img/monolith-with-layers-domains-components-growing.png" alt="the monolith grows"/>
+				<img src="img/monolith-with-layers-domains-components-growing.png" alt="the monolith grows" style="max-width:24rem;"/>
 			</div>
-			<p class="text-center idea-text" style="max-width:50%">... and to <b>grow</b>.</p>
+			<p class="text-center idea-text">... and to <b>grow</b>.</p>
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
