--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 	</div>
 </header>
 
-<section class="container">
-	<h2 class="hero-heading text-centered">Characteristics</h2>
+<section class="container container-spacing">
+	<h2 class="text-centered">Characteristics</h2>
 	<div class="container-with-tiles">
 		<div class="tile">
 			<div class="tile__img-container"><img src="img/KP_Visual.svg" alt="Customized Kube Platform Visual" class="benefit-image-customizable"></div>
@@ -63,8 +63,8 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 	</div>
 </section>
 
-<section class="container">
-	<h2 class="hero-heading text-centered">The Idea</h2>
+<section class="container container-spacing">
+	<h2 class="text-centered">The Idea</h2>
 	<div class="container-with-the-idea">
 		<div class="idea">
 			<div class="idea__img-container">
@@ -321,8 +321,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 	</div>
 </section>
 
-
-<section class="container">
+<section class="container container-spacing">
 	<p class="text-center">
 		You would like to use this content?<br/>
 		Sure, SCS is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">creative commons attribution-sharealike 3.0 unported license</a>.
