--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@ title: "SCS: Self-Contained Systems"
 description: Self-contained Systems (SCS) is a software architecture focused on a separation into independent systems - similar to microservices
 ---
 
-<!-- todo mobile -->
-<header class="hero">
-	<div class="container-hero w-container">
-		<div class="hero-container">
-			<div class="hero-main-content">
-				<h1 class="hero-heading">Self-contained System (SCS)</h1>
-				<h2 class="hero-subheading">An architectural approach that separates a larger system's functionality into many independent, collaborating systems.</h2>
-			</div>
-			<img class="hero-image" src="img/KP_Visual.svg" alt="monolith cut into multiple scs">
+<header class="page-cover">
+	<div class="page-cover-container container">
+		<img src="img/KP_Visual.svg" alt="monolith cut into multiple scs">
+		<div class="page-cover-content">
+			<h1>Self-contained System (SCS)</h1>
+			<h2>An architectural approach that separates a larger system's functionality into many independent, collaborating systems.</h2>
 		</div>
 	</div>
 </header>
