"idea" images should have a similar size

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 			<p class="text-center idea-text">With all these layers in one place, a monolith tends to <b>grow</b>...</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
-				<img src="img/monolith-with-layers-domains-components-growing.png" alt="the monolith grows" style="max-width:24rem;"/>
+			<div class="idea__img-container idea__img--large">
+				<img src="img/monolith-with-layers-domains-components-growing.png" alt="the monolith grows"/>
 			</div>
 			<p class="text-center idea-text">... and to <b>grow</b>.</p>
 		</div>
@@ -248,19 +248,19 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 			<p class="text-center idea-text">Self-contained Systems should be integrated over their <b>web interfaces</b> to minimize coupling to other systems.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-hyperlinks.png" alt="hyperlinks to navigate between scs"/>
 			</div>
 			<p class="text-center idea-text">Therefore simple <b>hyperlinks</b> can be used to navigate between systems.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-redirection.png" alt="redirection to ensure navigation works in both directions"/>
 			</div>
 			<p class="text-center idea-text">A <b>redirection</b> can be used to ensure navigation works in both directions.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-dynamic-inclusion.png" alt="dynamic inclusion"/>
 			</div>
 			<p class="text-center idea-text">Hyperlinks can also support the <b>dynamic inclusion</b> of content that is served by another application into the web interface of a self-contained system.</p>
@@ -284,73 +284,73 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 			<p class="text-center idea-text">This implies that – depending on the desired rate of updates – the data model’s consistency guarantees are <b>relaxed</b>.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-system-of-systems.png" alt="system of systems"/>
 			</div>
 			<p class="text-center idea-text">An integrated <b>system of systems</b> like this has many benefits.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-resilience.png" alt="resilience"/>
 			</div>
 			<p class="text-center idea-text">Overall <b>resilience</b> is improved through loosely coupled, replaceable systems.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-individually-scaled.png" alt="individual scaling"/>
 			</div>
 			<p class="text-center idea-text">Some systems can be <b>individually</b> scaled to serve varying demands.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-version1.png" alt="no big bang release 1"/>
 			</div>
 			<p class="text-center idea-text">It is not necessary to perform a risky <b>big bang release</b> to migrate an outdated, monolithic system into a system of systems.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-version2.png" alt="no big bang release 2"/>
 			</div>
 			<p class="text-center idea-text">It is not necessary to perform a risky <b>big bang release</b> to migrate an outdated, monolithic system into a system of systems.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-evolutionary-modernization1.png" alt="evolutionary modernization 1"/>
 			</div>
 			<p class="text-center idea-text">Instead a migration can happen in small, manageable steps which minimize the risk of failure and lead to an <b>evolutionary modernization</b>	of big and complex systems.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-evolutionary-modernization.png" alt="evolutionary modernization 2"/>
 			</div>
 			<p class="text-center idea-text">Instead a migration can happen in small, manageable steps which minimize the risk of failure and lead to an <b>evolutionary modernization</b>	of big and complex systems.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-standard-products.png" alt="usage of standard products in scs"/>
 			</div>
 			<p class="text-center idea-text">In reality a system of systems consists of individually developed software <b>and</b> standard products.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-product.png" alt="example of a standard product in an scs"/>
 			</div>
 			<p class="text-center idea-text">A product that fits well in a system of systems can be chosen by the following aspects: It has to solve a <b>defined set of tasks</b>and provide the same <b>integration mechanisms</b> that a self-contained system offers.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-product-replacability.png" alt="replaced product safely 1"/>
 			</div>
 			<p class="text-center idea-text">This ensures that products can be <b>replaced safely</b> by other products once their lifetime has ended.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-product-replacability1.png" alt="replaced product safely 2"/>
 			</div>
 			<p class="text-center idea-text">This ensures that products can be <b>replaced safely</b> by other products once their lifetime has ended.</p>
 		</div>
 		<div class="idea">
-			<div class="idea__img-container">
+			<div class="idea__img-container idea__img--large">
 				<img src="img/scs-uniform-interfaces.png" alt="uniform interface for all scs"/>
 			</div>
 			<p class="text-center idea-text">If a product with such integration mechanisms can not be found, it should at least be possible to extend that product with <b>uniform interfaces</b> that integrate well with the rest of the system.</p>
