adds jump-to-next-section button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 	</div>
 </header>
 
-<section class="container container-spacing">
+<section id="characteristics" class="container container-spacing">
 	<h2 class="text-centered">Characteristics</h2>
 	<div class="container-with-tiles">
 		<div class="tile">
@@ -100,7 +100,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 	</div>
 </section>
 
-<section class="container container-spacing">
+<section id="the-idea" class="container container-spacing">
 	<h2 class="text-centered">The Idea</h2>
 	<div class="container-with-the-idea">
 		<div class="idea">
@@ -109,7 +109,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 			</div>
 			<p class="text-center idea-text">A monolith contains <b>numerous</b> things inside of a single system …</p>
 		</div>
-		
+
 		<div class="idea">
 			<div class="idea__img-container">
 				<img src="img/monolith-with-domains.png" alt="a monolith holds several domains"/>
@@ -359,7 +359,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 	</div>
 </section>
 
-<section class="container container-spacing">
+<section id="how-to-contribute" class="container container-spacing">
 	<p class="text-center">
 		You would like to use this content?<br/>
 		Sure, SCS is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">creative commons attribution-sharealike 3.0 unported license</a>.
