adds img/scs-on-platform.svg

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
-				<img src="img/scs-multiple-slices.svg" alt="the monolith grows and grows..."/>
+				<img src="img/system-of-systems-scs.svg" alt="the monolith grows and grows..."/>
 			</div>
 			<p class="text-center idea-text">If you cut a monolithic system along its very domains …</p>
 		</div>
@@ -170,7 +170,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 		</div>
 		<div class="idea">
 			<div class="idea__img-container">
-				<img src="img/scs-sovereignty.svg" alt="SCS on different platforms"/>
+				<img src="img/scs-on-platform.svg" alt="SCS on different platforms"/>
 			</div>
 			<p class="text-center idea-text">Therefore self-contained systems can be individually developed for <b>different platforms.</b></p>
 		</div>
