Optimize typography, load fonts from CDN, tweak copywriting

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 	<div class="page-cover-container container">
 		<img src="img/scs-selected-slice.svg" alt="monolith cut into multiple scs">
 		<div class="page-cover-content">
-			<h1>Self-contained System (SCS)</h1>
-			<h2>An architectural approach that separates a larger system's functionality into many independent, collaborating systems.</h2>
+			<h1>Self-contained Systems (SCS)</h1>
+			<h2>An architectural approach that separates a larger system’s functionality into many independent, collaborating systems.</h2>
+			<p>Created by <img src="img/INNOQ_Logo-primary.svg" alt="INNOQ" class="logo-small" />. Cultivated by the community.</p>
 		</div>
 	</div>
 </header>
@@ -25,7 +26,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 					<img src="img/anchor.svg" class="anchor-icon"/>
 				</a>
 			</div>
-			<p class="text-center">Each SCS is an autonomous web application. For the SCS's domain, all data, the logic to process that data and all code to render the web interface is contained within the SCS. An SCS can fulfill its primary use cases on its own, without having to rely on other systems being available.</p>
+			<p class="text-center">Each SCS is an autonomous web application. For the SCS’s domain, all data, the logic to process that data and all code to render the web interface is contained within the SCS. An SCS can fulfill its primary use cases on its own, without having to rely on other systems being available.</p>
 		</div>
 		<div class="tile">
 			<div class="tile__img-container"><img src="img/scs-own-team.svg" alt="scs own team" class="benefit-image-customizable"></div>
