--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 		<div class="page-cover-content">
 			<h1>Self-contained Systems (SCS)</h1>
 			<h2>An architectural approach that separates a larger system’s functionality into many independent, collaborating systems.</h2>
-			<p>Created by <img src="img/INNOQ_Logo-primary.svg" alt="INNOQ" class="logo-small" />. Cultivated by the community.</p>
+			<p>Created by <img src="img/INNOQ_Logo-primary.svg" alt="INNOQ" class="logo-small" />. Driven by the community.</p>
 		</div>
 	</div>
 </header>
