adjust spacing on mobile

--- a/index.html
+++ b/index.html
@@ -181,8 +181,7 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 			</div>
 			<p class="text-center idea-text">
 				<span>An SCS contains its own </span>
-				<span style="color:#9191a5;"><b>user interface</b></span>
-					<span>, specific </span>
+				<span style="color:#9191a5;"><b>user interface</b></span><span>, specific </span>
 					<span style="color:#99e8d6"><b>business logic</b></span>
 				  <span> and separate </span>
 				  <span style="color:#fe9dae"><b>data storage</b></span>
