--- a/index.html
+++ b/index.html
@@ -361,15 +361,14 @@ description: Self-contained Systems (SCS) is a software architecture focused on 
 
 <section id="how-to-contribute" class="container container-spacing">
 	<p class="text-center">
-		You would like to use this content?<br/>
+		Would you like to use this content?<br/>
 		Sure, SCS is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">creative commons attribution-sharealike 3.0 unported license</a>.
 	</p>
 	<p class="text-centered">
-		You have comments, questions?<br/>
-		Checkout the <a href="faq.html">FAQ</a> or create a <a href="https://github.com/innoq/SCS/issues">GitHub issue</a>.
+		You’ve got comments, questions, or suggestions?<br/>
+		Checkout the <a href="faq.html">FAQ</a> or create an <a href="https://github.com/innoq/SCS/issues">issue</a>.
 	</p>
 	<p class="text-centered">
-		You would like to contribute?<br/>
-		Go to <a href="https://github.com/innoq/SCS">Github</a>.
+		Contribute on <a href="https://github.com/innoq/SCS">Github</a>.
 	</p>
 </section>
